--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 header, h1, a{
     
       font-family: 'Two of Hearts', cursive;
@@ -27,12 +29,20 @@ padding-left: 20px;}
   .hero-img {
     width: 500px; /* diminui a imagem no mobile */
   }
+  .sobre{
+    padding-left: 0%;
+    padding-right: 0%;
+  }
 }
 @media (max-width: 900px) {
       .hero-img {
         width: 99%;        /* ocupa a largura total do container */
         max-width: 400px;   /* mas não passa de 400px */
       }
+      .sobre{
+    padding-left: 0%;
+    padding-right: 0%;
+  }
     }
     span{
       color: #c2175b;
@@ -40,3 +50,12 @@ padding-left: 20px;}
     p{
       font-family: 'Rubik', sans-serif;
     }
+    .am{
+  font-family: 'Cabin', sans-serif;
+
+    }
+    @media (max-width: 768px) {
+  h1, header, a {
+   font-family: 'Fugaz One', sans-serif;
+  }
+}
